# ahs-compressor

./: Complete Example - AHS-Compressor + Claude.md  Complete Example: AHS-Compressor + Claude  LICENSE  README.md  ejemplo_uso_completo.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
ahs_compressor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ahs_test_final_final_v2/my_test_project/: main.py  my_module.py  project_ahs.json
ahs_test_final_final_v2/my_test_project/restored_project/: main.py  my_module.py
ahs_test_final_final_v2/venv_test_final_final_v2/: pyvenv.cfg
ahs_test_final_final_v2/venv_test_final_final_v2/Scripts/: activate  activate.bat
docker/: Dockerfile
src/ahs_compressor/: SOURCES.txt  entry_points.txt  requires.txt
src/ahs_compressor/app/: main.py
src/ahs_compressor/cli/: compress.py
